--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
 					</packages>
 					<includeMainDirectory>true</includeMainDirectory>
 					<includeTestDirectory>false</includeTestDirectory>
-					<presenter>graphviz</presenter>
+					<presenter>plantuml</presenter>
 				</configuration>
 				<executions>
 					<execution>
